--- a/src/styles/layout/app.css
+++ b/src/styles/layout/app.css
@@ -87,6 +87,8 @@
   .pane.main {
     margin: 0 auto;
     padding: 0;
+    max-width: 100vw;
+    overflow-x: hidden;
   }
 }
 
